--- a/Rehber.API/Rehber.API.csproj
+++ b/Rehber.API/Rehber.API.csproj
@@ -4,6 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\USER\source\repos\RiseConsultingRehber\Rehber.API\Rehber.API.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NSwag.AspNetCore" Version="13.15.5" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Rehber.Business\Rehber.Business.csproj" />
     <ProjectReference Include="..\Rehber.Entities\Rehber.Entities.csproj" />
